# FlowcaseAutomation

./: .dockerignore  .env.example  .gitignore  .mcp.json  Dockerfile  README.md  pyproject.toml
.claude/: launch.json
docs/: deployment.md
infra/: main.bicep
src/flowcase_mcp/: __init__.py  __main__.py  auth.py  availability.py  client.py  formatting.py  projects.py  regions.py  server.py
tests/: smoke.py
tests/eval/: README.md  client.py  gold.yaml  judge.py  machine_checks.py  render.py  requirements.txt  run_eval.py  schema.py
web/: README.md  docker-compose.yml
web/backend/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
web/backend/src/flowcase_web/: __init__.py  config.py  llm.py  main.py
web/backend/src/flowcase_web/agents/: __init__.py  router.py  seed.py
web/backend/src/flowcase_web/auth/: __init__.py  bootstrap.py  deps.py  password.py  router.py  tokens.py
web/backend/src/flowcase_web/chats/: __init__.py  orchestrator.py  router.py
web/backend/src/flowcase_web/eval/: __init__.py  checks.py  client.py  judge.py  router.py  runner.py  schema.py  storage.py
web/backend/src/flowcase_web/mcp_client/: __init__.py  client.py
web/backend/src/flowcase_web/models/: __init__.py  agent.py  chat.py  user.py
web/backend/src/flowcase_web/reference/: __init__.py  router.py
web/backend/src/flowcase_web/storage/: __init__.py  cosmos.py
web/frontend/: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
web/frontend/src/: App.tsx  index.css  main.tsx  types.ts
web/frontend/src/api/: agents.ts  auth.ts  chats.ts  client.ts  reference.ts
web/frontend/src/auth/: AuthContext.tsx  ProtectedRoute.tsx
web/frontend/src/components/: FilterBar.tsx  ui.tsx
web/frontend/src/components/tool-results/: AvailabilityResult.tsx  ConsultantCard.tsx  FindProjectsResult.tsx  FindUserResult.tsx  FindUsersResult.tsx  GetCvResult.tsx  ListCustomersResult.tsx  ListIndustriesResult.tsx  ListOfficesResult.tsx  ListRegionsResult.tsx  ListSkillsResult.tsx  SearchUsersResult.tsx  Sparkline.tsx  index.tsx  types.ts
web/frontend/src/pages/: ChatPage.tsx  HomePage.tsx  LoginPage.tsx
web/frontend/src/pages/admin/: AgentEditor.tsx  AgentsPage.tsx  UsersPage.tsx
