[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "flowcase-mcp"
version = "0.1.0"
description = "MCP server for Atea Flowcase (ServiceHub proxy)"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Marius Hernes" },
]
dependencies = [
    "mcp[cli]>=1.2.0",
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
    "python-dotenv>=1.0.0",
    "pandas>=2.2.0",
    "openpyxl>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
flowcase-mcp = "flowcase_mcp.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/flowcase_mcp"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
